k8s-configs/ping-cloud/base/pingaccess/deployment.yaml
# This defines the pingaccess deployment.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingaccess
spec:
  replicas: 1
  template:
    metadata:
      name: pingaccess
      annotations:
        lastUpdateReason: "NA"
    spec:
      containers:
      - name: pingaccess
        # FIXME: switch to stable image before GA
        image: pingidentity/pingaccess:edge
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "1"
          limits:
            memory: "1.5Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: pingaccess-jwk
          mountPath: /opt/in/instance/conf/pa.jwk
          subPath: pa.jwk
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        ports:
        - containerPort: 9000
          name: pa-admin
        - containerPort: 443
          name: pa-runtime
        - containerPort: 3030
          name: pa-agent
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pa-init
        configMap:
          name: pa-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
      - name: pingaccess-jwk
        secret:
          secretName: pingaccess-jwk
          optional: true
          defaultMode: 0400
