k8s-configs/ping-cloud/base/pingaccess/ingress.yaml
# This defines the ingress for the pingaccess management console.

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

# FIXME: Change ingress controller certificate to CA-signed certificate.
# FIXME: Make pingaccess listen on non-secure port so SSL can be terminated at
#        the LB.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingaccess-ingress
  labels:
    role: pingaccess
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - dev.ping-demo.com
  rules:
  - host: dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to the pingaccess console service
        - path: /
          backend:
            serviceName: pingaccess
            servicePort: 9000

        # This rule gives external access to the pingaccess admin service
#        - path: /pa-admin
#          backend:
#            serviceName: pingaccess
#            servicePort: 443
